#index-html-full

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -29,12 +29,9 @@ $header-links-bg: #1c1c1a;
 $pattern-info-bg: #1c1c1a;
 $pattern-list-bg: #ea5b0a;
 
-$thin-font: "Roboto Thin", sans-serif;
-$light-font: "Roboto Light", sans-serif;
-$regular-font: "Roboto Regular", sans-serif;
-$medium-font: "Roboto Medium", sans-serif;
+$light-font: "Gotham Light", sans-serif;
+$regular-font: "Open Sans Condensed", sans-serif;
 $bold-font: "Roboto Bold", sans-serif;
-$black-font: "Roboto Black", sans-serif;
 
 $base-font-color: #000;
 $base-font-size: 16px;
