#scss-for-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,3 +5,38 @@
 @import "fonts.scss";
 @import "wrapper.scss";
 @import "footer.scss";
+@import "header.scss";
+@import "header-nav.scss";
+@import "nav-list.scss";
+@import "social-list.scss";
+@import "main.scss";
+@import "sidebar.scss";
+@import "prize.scss";
+@import "hint.scss";
+@import "main-header.scss";
+@import "main-nav.scss";
+@import "main-cabinet.scss";
+@import "cabinet-result.scss";
+@import "main-content.scss";
+@import "content-wrapper.scss";
+@import "slide-panel.scss";
+@import "panel-list.scss";
+@import "popup-main.scss";
+@import "popup-enter.scss";
+@import "popup-register.scss";
+@import "reg-form.scss";
+@import "reg-list.scss";
+@import "reg-avatar.scss";
+@import "popup-login.scss";
+@import "log-form.scss";
+@import "popup-recover.scss";
+@import "recover-form.scss";
+@import "popup-answer.scss";
+@import "popup-mistake.scss";
+@import "log-form.scss";
+@import "log-list.scss";
+@import "popup-secondary.scss";
+@import "popup-video.scss";
+@import "popup-chars.scss";
+@import "chars-slider.scss";
+@import "chars-item.scss";
