#first-steps-css

--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,77 +1,7 @@
 @font-face {
-    font-family: 'Roboto Thin';
-    src: url('../fonts/roboto-thin_1.eot');
-    src: url('../fonts/roboto-thin_1.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-thin_1.woff2') format('woff2'),
-    url('../fonts/roboto-thin_1.woff') format('woff'),
-    url('../fonts/roboto-thin_1.ttf') format('truetype'),
-    url('../fonts/roboto-thin_1.svg#robotothin') format('svg');
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Roboto Light';
-    src: url('../fonts/roboto-light_1.eot');
-    src: url('../fonts/roboto-light_1.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-light_1.woff2') format('woff2'),
-    url('../fonts/roboto-light_1.woff') format('woff'),
-    url('../fonts/roboto-light_1.ttf') format('truetype'),
-    url('../fonts/roboto-light_1.svg#robotolight') format('svg');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Roboto Regular';
-    src: url('../fonts/roboto-regular_1.eot');
-    src: url('../fonts/roboto-regular_1.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-regular_1.woff2') format('woff2'),
-    url('../fonts/roboto-regular_1.woff') format('woff'),
-    url('../fonts/roboto-regular_1.ttf') format('truetype'),
-    url('../fonts/roboto-regular_1.svg#robotoregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: auto;
-}
-
-@font-face {
-    font-family: 'Roboto Medium';
-    src: url('../fonts/roboto-medium_1.eot');
-    src: url('../fonts/roboto-medium_1.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-medium_1.woff2') format('woff2'),
-    url('../fonts/roboto-medium_1.woff') format('woff'),
-    url('../fonts/roboto-medium_1.ttf') format('truetype'),
-    url('../fonts/roboto-medium_1.svg#robotomedium') format('svg');
-    font-weight: 600;
-    font-style: normal;
-    font-display: auto;
-}
-
-@font-face {
-    font-family: 'Roboto Bold';
-    src: url('../fonts/roboto-bold_1.eot');
-    src: url('../fonts/roboto-bold_1.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-bold_1.woff2') format('woff2'),
-    url('../fonts/roboto-bold_1.woff') format('woff'),
-    url('../fonts/roboto-bold_1.ttf') format('truetype'),
-    url('../fonts/roboto-bold_1.svg#robotobold') format('svg');
-    font-weight: 700;
-    font-style: normal;
-    font-display: auto;
-}
-
-@font-face {
-    font-family: 'Roboto Black';
-    src: url('../fonts/roboto-black_1.eot');
-    src: url('../fonts/roboto-black_1.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/roboto-black_1.woff2') format('woff2'),
-    url('../fonts/roboto-black_1.woff') format('woff'),
-    url('../fonts/roboto-black_1.ttf') format('truetype'),
-    url('../fonts/roboto-black_1.svg#robotoblack') format('svg');
-    font-weight: 900;
-    font-style: normal;
-    font-display: auto;
+	font-family: 'Gotham Extra Light';
+	src: url('../fonts/GothamExtraLight.eot');
+	src: local('☺'), url('../fonts/GothamExtraLight.woff') format('woff'), url('../fonts/GothamExtraLight.ttf') format('truetype'), url('../fonts/GothamExtraLight.svg') format('svg'), url("../fonts/GothamExtraLight.otf") format("opentype");
+  font-weight: 100;
+  font-style: normal;
 }
