--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,4 +1,46 @@
 .footer {
+  width: 100%;
+
   margin-bottom: 0;
   margin-top: auto;
+
+  padding-top: 4px;
+  padding-bottom: 7px;
+
+  background-color: $bg-footer;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+
+  &__wrapper {
+    @include container;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  &__copyright {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__text {
+    font: {
+      size: 0.438em;
+      family: $light-font;
+    }
+
+    color: $text-footer;
+    opacity: 0.3;
+    line-height: 1;
+    text-transform: uppercase;
+  }
 }
