--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -15,7 +15,7 @@ $text-mediumgray: #979797;
 $text-darkgray: #242424;
 $text-orange: #ef820d;
 $text-form: #787878;
-$text-footer: #838383;
+$text-footer: #ffffff;
 
 $link-hover-bg: #e60c96;
 $link-hover-text: #ffff00;
@@ -23,13 +23,14 @@ $link-hover-text: #ffff00;
 $bg-form-list: #ffffff;
 $btn-bg-wogr: #ef820d;
 
-$bg-footer: #1c1c1a;
+$bg-header: #ff6700;
+$bg-footer: #111111;
 
 $header-links-bg: #1c1c1a;
 $pattern-info-bg: #1c1c1a;
 $pattern-list-bg: #ea5b0a;
 
-$light-font: "Gotham Light", sans-serif;
+$light-font: "Gotham Extra Light", sans-serif;
 $regular-font: "Open Sans Condensed", sans-serif;
 $bold-font: "Roboto Bold", sans-serif;
 
