--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -17,14 +17,15 @@ $text-orange: #ef820d;
 $text-form: #787878;
 $text-footer: #ffffff;
 
-$link-hover-bg: #e60c96;
-$link-hover-text: #ffff00;
-
-$bg-form-list: #ffffff;
-$btn-bg-wogr: #ef820d;
+$btn-film: #ff456d;
+$btn-event: #6b3ea5;
+$btn-enter: #8dc63f;
+$btn-text-hover: #ff6700;
+$btn-closer: #f44336;
 
 $bg-header: #ff6700;
 $bg-footer: #111111;
+$bg-white: #ffffff;
 
 $header-links-bg: #1c1c1a;
 $pattern-info-bg: #1c1c1a;
