--- a/sass/main-header.scss
+++ b/sass/main-header.scss
@@ -1,8 +1,10 @@
 .main-header {
   width: 100%;
-  
+
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+
+  z-index: 2;
 }
