--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -5,4 +5,139 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
+
+  /*Оболочка кнопок и списков*/
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    position: relative;
+
+    &--film {
+      margin-left: 100px;
+      margin-right: 20px;
+    }
+  }
+  /*Кнопки*/
+  &__btn {
+    width: 201px;
+    height: 55px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    border: none;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+
+    cursor: pointer;
+    outline: none;
+
+    box-shadow:0px 1px 10px 2px rgba(4,4,4,0.25);
+    -webkit-box-shadow:0px 1px 10px 2px rgba(4,4,4,0.25);
+    -moz-box-shadow:0px 1px 10px 2px rgba(4,4,4,0.25);
+
+    &--film {
+      background-color: $btn-film;
+    }
+
+    &--event {
+      background-color: $btn-event;
+    }
+  }
+  /*Стилизация текста внутри кнопок*/
+  &__text {
+    font: {
+      size: 2em;
+      family: $regular-font;
+      weight: 700;
+    }
+
+    color: $text-white;
+    line-height: 1;
+    text-transform: uppercase;
+  }
+  /*Кнопка входа, появляется, если юзер закрыл попап регистрации при первом входе*/
+  &__enter {
+    width: 326px;
+    height: 55px;
+
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    border: none;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+
+    cursor: pointer;
+    outline: none;
+
+    background-color: $btn-enter;
+    margin-left: auto;
+    margin-right: 0;
+  }
+  /*Стилизация списков*/
+  &__list {
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    transform: translateX(-50%);
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    padding-left: 13px;
+    padding-bottom: 10px;
+    padding-top: 40px;
+
+    background-color: rgba(255, 255, 255, 0.9);
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+
+    box-shadow: 0px 1px 10px 2px rgba(4,4,4,0.15);
+    -webkit-box-shadow: 0px 1px 10px 2px rgba(4,4,4,0.15);
+    -moz-box-shadow: 0px 1px 10px 2px rgba(4,4,4,0.15);
+
+    width: 174px;
+
+    z-index: -1;
+  }
+  /*Элементы списка*/
+  &__item {
+    width: 100%;
+
+    &:hover .main-nav__link {
+      color: $btn-text-hover;
+    }
+  }
+  /*Ссылки внутри*/
+  &__link {
+    width: 100%;
+    height: 100%;
+
+    font: {
+      size: 1.25em;
+      family: $regular-font;
+      weight: 700;
+    }
+    line-height: normal;
+    text-decoration: none;
+    text-transform: uppercase;
+
+    &--film {
+      color: $btn-film;
+    }
+
+    &--event {
+      color: $btn-event;
+    }
+  }
 }
