--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -10,22 +10,28 @@ $text-lightblack: #1c1c1a;
 $text-white: #ffffff;
 $text-mail: #b3b3b3;
 $text-gray: #3b3b3b;
-$text-lightgray: #8c8d8d;
-$text-mediumgray: #979797;
+$text-lightgray: #828282;
+$text-mediumgray: #231f20;
 $text-darkgray: #242424;
-$text-orange: #ef820d;
+$text-orange: #ff6700;
 $text-form: #787878;
 $text-footer: #ffffff;
+$text-panel: #231f20;
+$text-error: #ff0000;
 
 $btn-film: #ff456d;
 $btn-event: #6b3ea5;
 $btn-enter: #8dc63f;
 $btn-text-hover: #ff6700;
 $btn-closer: #f44336;
+$btn-symbol-submit: #ff6700;
+$btn-register-popup: #ff6700;
+$btn-enter-popup: #8dc63f;
 
 $bg-header: #ff6700;
 $bg-footer: #111111;
 $bg-white: #ffffff;
+$bg-orange: #ff6700;
 
 $header-links-bg: #1c1c1a;
 $pattern-info-bg: #1c1c1a;
