--- a/sass/cabinet-result.scss
+++ b/sass/cabinet-result.scss
@@ -1,4 +1,5 @@
 .cabinet-result {
+  visibility: hidden;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -20,6 +21,11 @@
   margin-right: -90px;
   margin-top: -10px;
 
+  &--active {
+    visibility: visible;
+    transition: 0.5s ease-in-out;
+  }
+
   &__item {
     display: flex;
     flex-direction: column;
@@ -30,7 +36,7 @@
     min-width: 57px;
   }
 
-  &__frame {    
+  &__frame {
     &--full {
       display: none;
     }
