--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -86,7 +86,7 @@
   &__list {
     position: absolute;
     left: 50%;
-    top: 20px;
+    top: -300px;
     transform: translateX(-50%);
 
     list-style: none;
@@ -109,6 +109,13 @@
     width: 174px;
 
     z-index: -1;
+
+    transition: 0.5s ease-in-out;
+
+    &--active {
+      top: 20px;
+      transition: 0.5s ease-in-out;
+    }
   }
   /*Элементы списка*/
   &__item {
