--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    width: 65.4%;
+    width: 67.2%;
+
+    position: relative;
   }
 }
