--- a/sass/cabinet-result.scss
+++ b/sass/cabinet-result.scss
@@ -1,6 +1,6 @@
 .cabinet-result {
   visibility: hidden;
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
