--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,3 +40,8 @@
 @import "popup-chars.scss";
 @import "chars-slider.scss";
 @import "chars-item.scss";
+@import "sass/event/main-logo.scss";
+@import "sass/event/main-upload.scss";
+@import "sass/event/upload-form.scss";
+@import "sass/event/success-upload.scss";
+@import "sass/event/unsuccess-upload.scss";
