--- a/sass/main-cabinet.scss
+++ b/sass/main-cabinet.scss
@@ -8,6 +8,13 @@
 
   position: relative;
 
+  &--event {
+    align-self: flex-start;
+    margin-top: 55px;
+    margin-left: 5px;
+    width: 26.5%;
+  }
+
   &__avatar {
     order: 2;
     display: flex;
@@ -20,6 +27,8 @@
     width: 220px;
 
     margin-top: -30px;
+
+    z-index: 4;
   }
 
   &__close {
@@ -92,8 +101,53 @@
     line-height: 1;
     text-transform: uppercase;
   }
-
+  /*Кнопка участия в конкурсе*/
   &__btn {
-    display: none;
+    width: 385px;
+    height: 76px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+
+    margin-top: -10px;
+    margin-right: -40px;
+
+    border-radius: 30px;
+    background-image: url('../img/contest-btn.png');
+    background-position: top center;
+    background-size: 385px 76px;
+    text-decoration: none;
+
+    cursor: pointer;
+    outline: none;
+
+    box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+    -webkit-box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+    -moz-box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+
+    z-index: 2;
+
+    left: -340px;
+    top: 0;
+
+    &--event {
+      left: -50px;
+    }
+  }
+
+  &__text {
+    font: {
+      size: 2em;
+      family: $regular-font;
+      weigth: 700;
+    }
+
+    color: $text-white;
+    line-height: 1;
+    text-transform: uppercase;
   }
 }
