--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,4 +31,11 @@
 
     width: 100%;
   }
+
+  /*Стилизация для страницы Gallery*/
+  &--gallery {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
