--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,3 +45,10 @@
 @import "sass/event/upload-form.scss";
 @import "sass/event/success-upload.scss";
 @import "sass/event/unsuccess-upload.scss";
+@import "sass/gallery/gallery.scss";
+@import "sass/gallery/gallery-carousel.scss";
+@import "sass/gallery/gallery-slide.scss";
+@import "sass/gallery/gallery-item.scss";
+@import "sass/gallery/main-controls.scss";
+@import "sass/gallery/controls-form.scss";
+@import "sass/gallery/controls-filter.scss";
