--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -6,7 +6,7 @@ $laptop-wide: 1152px;
 $bg-body: #fff;
 
 $text-black: #000000;
-$text-lightblack: #1c1c1a;
+$text-lightblack: #231f20;
 $text-white: #ffffff;
 $text-mail: #b3b3b3;
 $text-gray: #3b3b3b;
@@ -27,6 +27,7 @@ $btn-closer: #f44336;
 $btn-symbol-submit: #ff6700;
 $btn-register-popup: #ff6700;
 $btn-enter-popup: #8dc63f;
+$btn-upload: #f7c21d;
 
 $bg-header: #ff6700;
 $bg-footer: #111111;
