--- a/sass/gallery/gallery-carousel.scss
+++ b/sass/gallery/gallery-carousel.scss
@@ -1,3 +1,12 @@
 .gallery-carousel {
   width: 100%;
+
+  &:not(.slick-initialized) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    visibility: hidden;
+  }
 }
