--- a/sass/gallery/main-controls.scss
+++ b/sass/gallery/main-controls.scss
@@ -1,9 +1,9 @@
 .main-controls {
-  width: 100%;
+  width: 655px;
 
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: flex-start;
 
   margin-top: 30px;
