--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
 .main {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 
   /*Стилизация совмещенной части кнопок, УЗ и контента*/
   &__middle {
@@ -12,7 +12,7 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    width: 67.2%;
+    width: 100%;
 
     position: relative;
   }
@@ -37,5 +37,57 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .main {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+
+    /*Стилизация совмещенной части кнопок, УЗ и контента*/
+    &__middle {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      width: 67.2%;
+
+      position: relative;
+    }
+    /*Стилизация для страниц Event и Gallery*/
+    &--event {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__upper {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
+
+      width: 100%;
+    }
+
+    /*Стилизация для страницы Gallery*/
+    &--gallery {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
   }
 }
