--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 @import "sidebar.scss";
 @import "prize.scss";
 @import "hint.scss";
+@import "personal.scss";
 @import "main-header.scss";
 @import "main-nav.scss";
 @import "main-cabinet.scss";
@@ -20,6 +21,9 @@
 @import "main-content.scss";
 @import "content-wrapper.scss";
 @import "slide-panel.scss";
+@import "help-panel.scss";
+@import "popup-help.scss";
+@import "help-list.scss";
 @import "panel-list.scss";
 @import "popup-main.scss";
 @import "popup-enter.scss";
