--- a/sass/cabinet-result.scss
+++ b/sass/cabinet-result.scss
@@ -1,44 +1,124 @@
 .cabinet-result {
-  visibility: hidden;
-  display: none;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
 
-  max-width: 450px;
+  width: 274px;
+  border: 2px solid #ffffff;
 
   list-style: none;
   margin: 0;
-  padding-left: 20px;
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-right: 30px;
-
-  background-color: rgba(255, 255, 255, 0.4);
-  border-top-left-radius: 45px;
-  border-bottom-left-radius: 45px;
-
-  margin-right: -90px;
-  margin-top: -10px;
-
-  &--active {
-    visibility: visible;
-    transition: 0.5s ease-in-out;
-  }
+  padding: 0;
 
   &__item {
+    width: 90px;
+    height: 90px;
+    border: 3px solid #ffffff;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    max-width: 62px;
-    min-width: 57px;
+    cursor: pointer;
+
+    box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+    -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+    -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
   }
 
   &__frame {
+    &--empty {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: rgba(189, 190, 190, 0.8);
+
+      box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+      -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+      -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+
+      .cabinet-result__image {
+        opacity: 0.1;
+      }
+    }
+
     &--full {
       display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: rgba(255, 255, 255, 0.55);
+
+      box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+      -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+      -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+    }
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .cabinet-result {
+    visibility: hidden;
+    display: none;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    max-width: 450px;
+
+    list-style: none;
+    margin: 0;
+    padding-left: 20px;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-right: 30px;
+
+    background-color: rgba(255, 255, 255, 0.4);
+    border-top-left-radius: 45px;
+    border-bottom-left-radius: 45px;
+
+    margin-right: -90px;
+    margin-top: -10px;
+
+    &--active {
+      visibility: visible;
+      transition: 0.5s ease-in-out;
+    }
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      max-width: 62px;
+      min-width: 57px;
+    }
+
+    &__frame {
+      &--full {
+        display: none;
+      }
     }
   }
 }
