--- a/sass/chars-item.scss
+++ b/sass/chars-item.scss
@@ -6,19 +6,21 @@
 
   position: relative;
 
-  width: 438px;
-  height: 552px;
+  width: 300px !important;
+  height: 378px;
 
-  padding-top: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 
   box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
 
-  border-radius: 60px;
+  border-radius: 40px;
+
+  margin: 0 auto;
 
   background-color: $bg-orange;
 
@@ -30,19 +32,19 @@
     background-repeat: no-repeat;
     background-position: top -12px center;
 
-    width: 438px;
-    height: 552px;
+    width: 300px;
+    height: 378px;
 
     top: 0;
     left: 0;
 
-    border-radius: 60px;
+    border-radius: 40px;
     z-index: 0;
   }
 
   &__title {
     font: {
-      size: 2.25em;
+      size: 2em;
       family: $regular-font;
       weight: 700;
     }
@@ -60,8 +62,8 @@
     display: block;
     align-self: center;
 
-    width: 273px;
-    height: 273px;
+    width: 150px;
+    height: 150px;
 
     background-color: $bg-white;
     border-radius: 50%;
@@ -70,16 +72,16 @@
   }
 
   &__img {
-    width: 273px;
-    height: 273px;
+    width: 150px;
+    height: 150px;
   }
 
   &__description {
     display: block;
-    width: 378px;
+    width: 280px;
 
     font: {
-      size: 0.875em;
+      size: 0.625em;
       family: $regular-font;
       weight: 600;
     }
@@ -91,4 +93,109 @@
     margin-top: 20px;
     margin-bottom: 0;
   }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+  .chars-item {
+    display: flex !important;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    position: relative;
+
+    width: 438px;
+    height: 552px;
+
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+
+    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+
+    border-radius: 60px;
+
+    background-color: $bg-orange;
+
+    &::before {
+      position: absolute;
+      content: '';
+
+      background-image: url('../img/char-bg.png');
+      background-repeat: no-repeat;
+      background-position: top -12px center;
+
+      width: 438px;
+      height: 552px;
+
+      top: 0;
+      left: 0;
+
+      border-radius: 60px;
+      z-index: 0;
+    }
+
+    &__title {
+      font: {
+        size: 2.25em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      margin-top: 0;
+      margin-bottom: 20px;
+
+      text-transform: uppercase;
+      text-align: center;
+    }
+
+    &__frame {
+      display: block;
+      align-self: center;
+
+      width: 273px;
+      height: 273px;
+
+      background-color: $bg-white;
+      border-radius: 50%;
+
+      z-index: 1;
+    }
+
+    &__img {
+      width: 273px;
+      height: 273px;
+    }
+
+    &__description {
+      display: block;
+      width: 378px;
+
+      font: {
+        size: 0.875em;
+        family: $regular-font;
+        weight: 600;
+      }
+
+      color: $text-white;
+      line-height: normal;
+      text-align: center;
+
+      margin-top: 20px;
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop) {
+
 }
