--- a/sass/content-wrapper.scss
+++ b/sass/content-wrapper.scss
@@ -1,42 +1,33 @@
 .content-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
 
-  width: 538px;
+  width: 274px;
+  border: 2px solid #ffffff;
 
   margin-bottom: 20px;
 
-  border: 2px solid #ffffff;
-  /*Страница совет*/
-  &--tip {
-    margin-bottom: 30px;
-  }
   /*Стилизация элемента*/
   &__item {
-    width: 178px;
-    height: 178px;
+    width: 90px;
+    height: 90px;
     border: 3px solid #ffffff;
 
     cursor: pointer;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
     -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
     -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
 
     &--active {
-      width: 178px;
-      height: 178px;
-      border: 3px solid #ffffff;
-
-      cursor: pointer;
-
-      box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
-      -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
-      -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
-
       .content-wrapper__frame--empty {
         display: none;
       }
@@ -53,8 +44,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 100%;
-    height: 100%;
+    width: 84px;
+    height: 84px;
 
     background-color: rgba(255, 255, 255, 0.35);
 
@@ -69,9 +60,111 @@
     justify-content: center;
     align-items: center;
 
-    width: 100%;
-    height: 100%;
+    width: 84px;
+    height: 84px;
 
     background-color: $bg-white;
+  }
+
+  &__image {
+    max-height: 80px;
+    max-width: 80px;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .content-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+    width: 538px;
+
+    margin-bottom: 20px;
+
+    border: 2px solid #ffffff;
+    /*Страница совет*/
+    &--tip {
+      margin-bottom: 30px;
+    }
+    /*Стилизация элемента*/
+    &__item {
+      width: 178px;
+      height: 178px;
+      border: 3px solid #ffffff;
+
+      cursor: pointer;
+
+      box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+      -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+      -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+
+      &--active {
+        width: 178px;
+        height: 178px;
+        border: 3px solid #ffffff;
+
+        cursor: pointer;
+
+        box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+        -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+        -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2);
+
+        .content-wrapper__frame--empty {
+          display: none;
+        }
+
+        .content-wrapper__frame--active {
+          display: flex;
+        }
+      }
+    }
+    /*Внутрянка для черных силуэтов*/
+    &__frame--empty {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: rgba(255, 255, 255, 0.35);
+
+      box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+      -webkit-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+      -moz-box-shadow: 0px 0px 20px 3px rgba(255,255,255,0.2)inset;
+    }
+    /*Внутрянка для выбранного элемента*/
+    &__frame--active {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: $bg-white;
+    }
+
+    &__image {
+      max-height: 160px;
+      max-width: 160px;
+    }
   }
 }
