--- a/sass/global-styles.scss
+++ b/sass/global-styles.scss
@@ -38,6 +38,15 @@ body {
   background-image: url('../img/index-bg.jpg');
   background-repeat: no-repeat;
   background-position: top center;
+  background-size: cover;
+
+  @media only screen and (min-width: $laptop-wide) {
+    background-color: $bg-body;
+    background-image: url('../img/index-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: auto;
+  }
 }
 
 .body-tip {
