--- a/sass/header-nav.scss
+++ b/sass/header-nav.scss
@@ -1,3 +1,33 @@
 .header-nav {
-  display: none;
+  position: absolute;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  width: 100%;
+
+  top: -450px;
+  left: 0;
+
+  &--active {
+    top: 45px;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+
+}
+
+@media only screen and (min-width: $laptop-wide) {
+
 }
