--- a/sass/header.scss
+++ b/sass/header.scss
@@ -2,24 +2,28 @@
   width: 100%;
 
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
+
+  position: relative;
 
   background-color: $bg-header;
 
-  box-shadow:0px 7px 20px 3px rgba(51,51,51,0.5);
-  -webkit-box-shadow:0px 7px 20px 3px rgba(51,51,51,0.5);
-  -moz-box-shadow:0px 7px 20px 3px rgba(51,51,51,0.5);
+  box-shadow:0px 3px 10px 1px rgba(51,51,51,0.5);
+  -webkit-box-shadow:0px 3px 10px 1px rgba(51,51,51,0.5);
+  -moz-box-shadow:0px 3px 10px 1px rgba(51,51,51,0.5);
 
-  padding-top: 12px;
-  padding-bottom: 19px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   z-index: 1005;
 
   &__logo {
-    width: 202px;
-    height: 29px;
+    width: 130px;
+    height: 19px;
+
+    margin: 0 auto;
   }
 
   &__link {
@@ -30,5 +34,74 @@
   &__img {
     width: 100%;
     height: 100%;
+  }
+
+  &__opener {
+    display: block;
+
+    width: 28.5px;
+    height: 26px;
+
+    background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' fill='%23ffffff' width='124px' height='124px' viewBox='0 0 124 124' style='enable-background:new 0 0 124 124;' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M112,6H12C5.4,6,0,11.4,0,18s5.4,12,12,12h100c6.6,0,12-5.4,12-12S118.6,6,112,6z'/%3E%3Cpath d='M112,50H12C5.4,50,0,55.4,0,62c0,6.6,5.4,12,12,12h100c6.6,0,12-5.4,12-12C124,55.4,118.6,50,112,50z'/%3E%3Cpath d='M112,94H12c-6.6,0-12,5.4-12,12s5.4,12,12,12h100c6.6,0,12-5.4,12-12S118.6,94,112,94z'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+    background-size: 28.5px 26px;
+
+    margin-right: 10px;
+
+    background-color: transparent;
+    border: none;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .header {
+    &__opener {
+      display: none;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .header {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: $bg-header;
+
+    box-shadow:0px 7px 20px 3px rgba(51,51,51,0.5);
+    -webkit-box-shadow:0px 7px 20px 3px rgba(51,51,51,0.5);
+    -moz-box-shadow:0px 7px 20px 3px rgba(51,51,51,0.5);
+
+    padding-top: 12px;
+    padding-bottom: 19px;
+
+    z-index: 1005;
+
+    &__logo {
+      width: 202px;
+      height: 29px;
+    }
+
+    &__link {
+      width: 100%;
+      height: 100%;
+    }
+
+    &__img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
