--- a/sass/main-cabinet.scss
+++ b/sass/main-cabinet.scss
@@ -1,6 +1,4 @@
 .main-cabinet {
-  align-self: flex-end;
-
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -8,22 +6,9 @@
 
   position: relative;
 
-  &--event {
-    align-self: flex-start;
-    margin-top: 55px;
-    margin-left: 5px;
-    width: 26.5%;
-  }
-
-  &--gallery {
-    align-self: flex-start;
-    margin-top: 55px;
-    margin-left: 5px;
-    width: 26.5%;
-  }
+  margin-right: 10px;
 
   &__avatar {
-    order: 2;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -31,9 +16,7 @@
 
     position: relative;
 
-    width: 220px;
-
-    margin-top: -30px;
+    width: 55px;
 
     z-index: 4;
   }
@@ -45,14 +28,14 @@
     outline: none;
 
     top: -10px;
-    right: 40px;
+    right: 0px;
 
-    width: 36px;
-    height: 36px;
+    width: 18px;
+    height: 18px;
 
     background-color: $btn-closer;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 63.55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Ctitle%3Eclose-cross%3C/title%3E%3Cg id='Слой_2' data-name='Слой 2'%3E%3Cg id='Слой_1-2' data-name='Слой 1'%3E%3Cpath class='cls-1' d='M28.94,31.79.61,60.11A2,2,0,0,0,.61,63,2,2,0,0,0,2,63.55,2,2,0,0,0,3.46,63L32,34.42,60.54,63a2,2,0,0,0,2.85,0,2,2,0,0,0,0-2.85L35.06,31.79,63.41,3.44A2,2,0,0,0,60.56.59L32,29.15,3.44.59A2,2,0,0,0,.59,3.44Z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    background-size: 19px 19px;
+    background-size: 9px 9px;
     background-position: center center;
     background-repeat: no-repeat;
 
@@ -68,12 +51,10 @@
   &__frame {
     background-color: $bg-white;
 
-    width: 110px;
-    height: 110px;
+    width: 55px;
+    height: 55px;
 
     border-radius: 50%;
-
-    margin-bottom: 10px;
 
     display: block;
     position: relative;
@@ -81,14 +62,16 @@
     cursor: pointer;
     outline: none;
 
+    margin-bottom: 5px;
+
     box-shadow:0px 1px 13px 0px rgba(4,4,4,0.3);
     -webkit-box-shadow:0px 1px 13px 0px rgba(4,4,4,0.3);
     -moz-box-shadow:0px 1px 13px 0px rgba(4,4,4,0.3);
   }
 
   &__photo {
-    width: 79px;
-    height: 65px;
+    width: 39.5px;
+    height: 32.5px;
 
     position: absolute;
     top: 50%;
@@ -99,7 +82,7 @@
 
   &__name {
     font: {
-      size: 1.375em;
+      size: 0.625em;
       family: $regular-font;
       weight: 600;
     }
@@ -110,55 +93,259 @@
   }
   /*Кнопка участия в конкурсе*/
   &__btn {
-    width: 385px;
-    height: 76px;
+    width: 192.5px;
+    height: 38px;
 
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
     position: absolute;
 
-    margin-top: -10px;
-    margin-right: -40px;
-
-    border-radius: 30px;
+    border-radius: 20px;
     background-image: url('../img/contest-btn.png');
     background-position: top center;
-    background-size: 385px 76px;
+    background-size: 192.5px 38px;
     text-decoration: none;
 
     cursor: pointer;
     outline: none;
 
-    box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+    box-shadow: 0px 0px 30px 0px rgba(247,194,29,0.2);
     -webkit-box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
-    -moz-box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+    -moz-box-shadow: 0px 0px 30px 0px rgba(247,194,29,0.2);
 
     z-index: 2;
 
-    left: -340px;
-    top: 0;
-
-    &--event {
-      left: -50px;
-    }
-
-    &--gallery {
-      left: -60px;
-    }
+    left: -200px;
+    top: 10px;
   }
 
   &__text {
     font: {
-      size: 2em;
+      size: 1em;
       family: $regular-font;
-      weigth: 700;
+      weigth: 600;
     }
 
     color: $text-white;
     line-height: 1;
     text-transform: uppercase;
   }
+  /*Фон для списка с количеством оставшихся элементов*/
+  &__popup {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
+
+    &--active {
+      display: flex;
+    }
+  }
+
+  &__remain {
+    display: block;
+    margin-bottom: 10px;
+    font: {
+      size: 1.25em;
+      family: $regular-font;
+    }
+
+    color: $text-white;
+    line-height: 1;
+    text-transform: uppercase;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .main-cabinet {
+    align-self: flex-end;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+
+    position: relative;
+
+    margin-right: 0;
+
+    &--event {
+      align-self: flex-start;
+      margin-top: 55px;
+      margin-left: 5px;
+      width: 26.5%;
+    }
+
+    &--gallery {
+      align-self: flex-start;
+      margin-top: 55px;
+      margin-left: 5px;
+      width: 26.5%;
+    }
+
+    &__avatar {
+      order: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      position: relative;
+
+      width: 220px;
+
+      margin-top: -30px;
+
+      z-index: 4;
+    }
+
+    &__close {
+      position: absolute;
+
+      cursor: pointer;
+      outline: none;
+
+      top: -10px;
+      right: 40px;
+
+      width: 36px;
+      height: 36px;
+
+      background-color: $btn-closer;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 63.55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:%23fff;%7D%3C/style%3E%3C/defs%3E%3Ctitle%3Eclose-cross%3C/title%3E%3Cg id='Слой_2' data-name='Слой 2'%3E%3Cg id='Слой_1-2' data-name='Слой 1'%3E%3Cpath class='cls-1' d='M28.94,31.79.61,60.11A2,2,0,0,0,.61,63,2,2,0,0,0,2,63.55,2,2,0,0,0,3.46,63L32,34.42,60.54,63a2,2,0,0,0,2.85,0,2,2,0,0,0,0-2.85L35.06,31.79,63.41,3.44A2,2,0,0,0,60.56.59L32,29.15,3.44.59A2,2,0,0,0,.59,3.44Z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      background-size: 19px 19px;
+      background-position: center center;
+      background-repeat: no-repeat;
+
+      border: none;
+      border-radius: 50%;
+      z-index: 2;
+
+      box-shadow: 0px 0px 5px 0px rgba(51,51,51,0.6);
+      -webkit-box-shadow: 0px 0px 5px 0px rgba(51,51,51,0.6);
+      -moz-box-shadow: 0px 0px 5px 0px rgba(51,51,51,0.6);
+    }
+
+    &__frame {
+      background-color: $bg-white;
+
+      width: 110px;
+      height: 110px;
+
+      border-radius: 50%;
+
+      margin-bottom: 10px;
+
+      display: block;
+      position: relative;
+
+      cursor: pointer;
+      outline: none;
+
+      box-shadow:0px 1px 13px 0px rgba(4,4,4,0.3);
+      -webkit-box-shadow:0px 1px 13px 0px rgba(4,4,4,0.3);
+      -moz-box-shadow:0px 1px 13px 0px rgba(4,4,4,0.3);
+    }
+
+    &__photo {
+      width: 79px;
+      height: 65px;
+
+      position: absolute;
+      top: 50%;
+      left: 50%;
+
+      transform: translate(-50%, -50%);
+    }
+
+    &__name {
+      font: {
+        size: 1.375em;
+        family: $regular-font;
+        weight: 600;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      text-transform: uppercase;
+    }
+    /*Кнопка участия в конкурсе*/
+    &__btn {
+      width: 385px;
+      height: 76px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      position: absolute;
+
+      margin-top: -10px;
+      margin-right: -40px;
+
+      border-radius: 30px;
+      background-image: url('../img/contest-btn.png');
+      background-position: top center;
+      background-size: 385px 76px;
+      text-decoration: none;
+
+      cursor: pointer;
+      outline: none;
+
+      box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+      -webkit-box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+      -moz-box-shadow:0px 0px 30px 0px rgba(247,194,29,0.2);
+
+      z-index: 2;
+
+      left: -340px;
+      top: 0;
+
+      &--event {
+        left: -50px;
+      }
+
+      &--gallery {
+        left: -60px;
+      }
+    }
+
+    &__text {
+      font: {
+        size: 2em;
+        family: $regular-font;
+        weigth: 700;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      text-transform: uppercase;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+
 }
