--- a/sass/main-content.scss
+++ b/sass/main-content.scss
@@ -1,25 +1,26 @@
 .main-content {
   position: relative;
 
-  width: 600px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
 
-  margin-top: -70px;
-  /*Страница совета*/
-  &--tip {
-    margin-top: -80px;
-    padding-left: 80px;
-  }
+  padding-left: 10px;
+  padding-right: 10px;
+
   /*Заголовок*/
   &__title {
+    display: block;
+    margin-top: 0;
+    margin-bottom: 5px;
+
     font: {
-      size: 1.875em;
+      size: 1em;
       family: $regular-font;
-      weight: 700;
+      weight: 600;
     }
 
     color: $text-white;
@@ -39,7 +40,7 @@
   &__question {
     display: block;
 
-    width: 780px;
+    width: 300px;
 
     text-align: center;
 
@@ -63,18 +64,18 @@
 
   /*Кнопка отправки ответа*/
   &__submit {
-    width: 196px;
-    height: 60px;
+    width: 88px;
+    height: 30px;
 
     border: none;
-    border-radius: 30px;
+    border-radius: 20px;
 
     background-color: $btn-symbol-submit;
 
     font: {
-      size: 2.5em;
+      size: 1em;
       family: $regular-font;
-      weight: 700;
+      weight: 600;
     }
 
     color: $text-white;
@@ -89,5 +90,113 @@
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
     -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
     -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .main-content {
+    position: relative;
+
+    width: 600px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    margin-top: -70px;
+    /*Страница совета*/
+    &--tip {
+      margin-top: -80px;
+      padding-left: 80px;
+    }
+    /*Заголовок*/
+    &__title {
+      font: {
+        size: 1.875em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: normal;
+      text-transform: uppercase;
+
+      text-align: center;
+      /*Страница совета*/
+      &--tip {
+        display: block;
+        width: 720px;
+
+        margin-bottom: 30px;
+      }
+    }
+    /*Страница совета*/
+    &__question {
+      display: block;
+
+      width: 780px;
+
+      text-align: center;
+
+      background:-webkit-linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+      background:-o-linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+      background:-moz-linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+      background:linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+
+      font: {
+        size: 2.125em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: normal;
+      text-transform: uppercase;
+
+      margin-bottom: 30px;
+    }
+
+    /*Кнопка отправки ответа*/
+    &__submit {
+      width: 196px;
+      height: 60px;
+
+      border: none;
+      border-radius: 30px;
+
+      background-color: $btn-symbol-submit;
+
+      font: {
+        size: 2.5em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      text-transform: uppercase;
+
+      text-align: center;
+
+      cursor: pointer;
+      outline: none;
+
+      box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
+      -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
+      -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
+    }
   }
 }
