--- a/sass/main-header.scss
+++ b/sass/main-header.scss
@@ -1,10 +1,24 @@
 .main-header {
-  width: 100%;
+  display: none;
+}
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+@media only screen and (min-width: 414px) {
 
-  z-index: 2;
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .main-header {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    z-index: 2;
+  }
 }
