--- a/sass/popup-enter.scss
+++ b/sass/popup-enter.scss
@@ -22,9 +22,9 @@
 
     position: relative;
 
-    width: 410px;
+    width: 300px;
 
-    border-radius: 50px;
+    border-radius: 40px;
 
     background-color: $bg-white;
 
@@ -32,20 +32,20 @@
     -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
 
-    padding-top: 50px;
-    padding-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 20px;
   }
 
   &__close {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 
     border: none;
     border-radius: 50%;
 
     position: absolute;
-    top: -20px;
-    right: -30px;
+    top: -5px;
+    right: -5px;
 
     cursor: pointer;
     outline: none;
@@ -56,7 +56,7 @@
 
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 20px 20px;
+    background-size: 15px 15px;
 
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
@@ -72,7 +72,7 @@
     outline: none;
 
     font: {
-      size: 2em;
+      size: 1.25em;
       family: $regular-font;
       weight: 700;
     }
@@ -87,17 +87,17 @@
     -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
 
     &--register {
-      width: 200px;
+      width: 150px;
       background-color: $btn-register-popup;
 
-      margin-bottom: 32px;
+      margin-bottom: 16px;
     }
 
     &--enter {
-      width: 124px;
+      width: 100px;
       background-color: $btn-enter-popup;
 
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
   }
 
@@ -114,4 +114,52 @@
 
     border-bottom: 3px solid $text-lightgray;
   }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+  .popup-enter {
+    &__wrapper {
+      width: 410px;
+
+      border-radius: 50px;
+
+      padding-top: 50px;
+      padding-bottom: 30px;
+    }
+
+    &__close {
+      width: 40px;
+      height: 40px;
+
+      top: -20px;
+      right: -30px;
+
+      background-size: 20px 20px;
+    }
+
+    &__btn {
+      font: {
+        size: 2em;
+      }
+
+      &--register {
+        width: 200px;
+
+        margin-bottom: 32px;
+      }
+
+      &--enter {
+        width: 124px;
+
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop) {
 }
