--- a/sass/popup-login.scss
+++ b/sass/popup-login.scss
@@ -22,9 +22,9 @@
 
     position: relative;
 
-    width: 410px;
+    width: 300px;
 
-    border-radius: 50px;
+    border-radius: 40px;
 
     background-color: $bg-white;
 
@@ -32,7 +32,7 @@
     -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
 
-    padding-top: 35px;
+    padding-top: 30px;
   }
 
   &__close {
@@ -44,8 +44,8 @@
     width: 100%;
     height: 48px;
 
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
 
     display: flex;
     flex-direction: column;
@@ -68,4 +68,83 @@
 
     border-bottom: 3px solid $text-white;
   }
+}
+
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+  .popup-login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
+
+    &__wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      position: relative;
+
+      width: 410px;
+
+      border-radius: 50px;
+
+      background-color: $bg-white;
+
+      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+
+      padding-top: 35px;
+    }
+
+    &__bottom {
+      background-color: $bg-orange;
+      width: 100%;
+      height: 48px;
+
+      border-bottom-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__register {
+      align-self: center;
+
+      font: {
+        size: 1em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      text-decoration: none;
+
+      border-bottom: 3px solid $text-white;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop) {
+
 }
