--- a/sass/popup-mistake.scss
+++ b/sass/popup-mistake.scss
@@ -22,12 +22,12 @@
 
     position: relative;
 
-    width: 410px;
+    width: 300px;
 
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 33px;
-    padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     border-radius: 50px;
 
@@ -47,7 +47,7 @@
     width: 288px;
 
     font: {
-      size: 2.813em;
+      size: 2.5em;
       family: $regular-font;
       weight: 700;
     }
@@ -64,10 +64,10 @@
   &__subtitle {
     text-align: center;
     display: block;
-    width: 360px;
+    width: 280px;
 
     font: {
-      size: 1.25em;
+      size: 1em;
       family: $regular-font;
       weight: 700;
     }
@@ -109,5 +109,121 @@
     box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+  .popup-mistake {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
+
+    &__wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      position: relative;
+
+      width: 410px;
+
+      padding-left: 30px;
+      padding-right: 30px;
+      padding-top: 33px;
+      padding-bottom: 15px;
+
+      border-radius: 50px;
+
+      background-color: $bg-white;
+
+      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    }
+
+    &__title {
+      display: block;
+      width: 288px;
+
+      font: {
+        size: 2.813em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-mediumgray;
+      line-height: normal;
+      text-transform: uppercase;
+      text-align: center;
+
+      margin-top: 0;
+      margin-bottom: 15px;
+    }
+
+    &__subtitle {
+      text-align: center;
+      display: block;
+      width: 360px;
+
+      font: {
+        size: 1.25em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-lightgray;
+      line-height: 1;
+      text-transform: uppercase;
+
+      margin-bottom: 25px;
+    }
+
+    &__link {
+      display: block;
+      width: 254px;
+      height: 44px;
+
+      border: none;
+      border-radius: 40px;
+
+      margin-bottom: 25px;
+
+      background-color: $bg-orange;
+
+      cursor: pointer;
+      outline: none;
+
+      font: {
+        size: 1.75em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      text-transform: uppercase;
+      text-decoration: none;
+      text-align: center;
+
+      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    }
   }
 }
