--- a/sass/popup-video.scss
+++ b/sass/popup-video.scss
@@ -30,9 +30,56 @@
   }
 
   &__player {
-    width: 1044px;
-    height: 586px;
+    width: 300px;
+    height: auto;
 
     border: 2px solid #b2d7f2;
   }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+  .popup-video {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 1000;
+
+    &__wrapper {
+      position: relative;
+
+      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    }
+
+    &__close {
+      top: -40px;
+      right: -40px;
+    }
+
+    &__player {
+      width: 1044px;
+      height: 586px;
+
+      border: 2px solid #b2d7f2;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop) {
+
 }
