--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -1,20 +1,20 @@
 .sidebar {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
 
-  width: 32.8%;
-  height: 100%;
+  width: 100%;
 
-  padding-top: 10px;
-  padding-right: 130px;
+  padding-top: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
 
   &__logo {
-    width: 483px;
-    height: 365px;
+    width: 143px;
+    height: 108px;
 
-    margin-bottom: 50px;
+    margin-bottom: 10px;
   }
 
   &__link {
@@ -28,13 +28,106 @@
   }
 
   &__frame {
-    width: 483px;
-    height: 365px;
+    width: 143px;
+    height: 108px;
   }
 
-  &__image,
-  &__date {
+  &__image {
     width: 100%;
     height: 100%;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+    width: 32.8%;
+    height: 100%;
+
+    padding-top: 10px;
+    padding-right: 130px;
+
+    &__logo {
+      width: 483px;
+      height: 365px;
+
+      margin-bottom: 50px;
+    }
+
+    &__link {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+    }
+
+    &__frame {
+      width: 483px;
+      height: 365px;
+    }
+
+    &__image,
+    &__date {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+    width: 32.8%;
+    height: 100%;
+
+    padding-top: 10px;
+    padding-right: 130px;
+
+    &__logo {
+      width: 483px;
+      height: 365px;
+
+      margin-bottom: 50px;
+    }
+
+    &__link {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+    }
+
+    &__frame {
+      width: 483px;
+      height: 365px;
+    }
+
+    &__image,
+    &__date {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
