--- a/sass/event/main-logo.scss
+++ b/sass/event/main-logo.scss
@@ -1,27 +1,67 @@
 .main-logo {
-  width: 18.6%;
+  width: 100%;
 
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
 
-  padding-top: 10px;
+  padding-top: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
 
   &__link {
     display: block;
 
-    width: 357px;
-    height: 270px;
+    width: 143px;
+    height: 108px;
   }
 
   &__frame {
-    width: 357px;
-    height: 270px;
+    width: 143px;
+    height: 108px;
   }
 
   &__image {
     width: 100%;
     height: auto;
+  }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+
+}
+
+@media only screen and (min-width: $laptop) {
+  .main-logo {
+    width: 18.6%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+
+    padding-top: 10px;
+
+    &__link {
+      display: block;
+
+      width: 357px;
+      height: 270px;
+    }
+
+    &__frame {
+      width: 357px;
+      height: 270px;
+    }
+
+    &__image {
+      width: 100%;
+      height: auto;
+    }
   }
 }
