--- a/sass/event/main-upload.scss
+++ b/sass/event/main-upload.scss
@@ -1,19 +1,16 @@
 .main-upload {
   width: 100%;
-  max-width: 980px;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
-
-  padding-right: 70px;
+  align-items: center;
 
   &__wrapper {
-    width: 426px;
+    width: 250px;
 
     background-color: $bg-white;
-    border-radius: 50px;
+    border-radius: 25px;
 
     display: flex;
     flex-direction: column;
@@ -33,8 +30,8 @@
 
     width: 100%;
 
-    padding-left: 14px;
-    padding-top: 11px;
+    padding-left: 5px;
+    padding-top: 5px;
     padding-bottom: 5px;
 
     box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
@@ -43,10 +40,10 @@
   }
 
   &__person {
-    width: 70px;
-    height: 70px;
+    width: 35px;
+    height: 35px;
 
-    border: 4px solid #838383;
+    border: 2px solid #838383;
     border-radius: 50%;
 
     background-color: transparent;
@@ -60,13 +57,13 @@
   }
 
   &__avatar {
-    width: 47px;
-    height: 40px;
+    width: 23.5px;
+    height: 20px;
   }
 
   &__name {
     font: {
-      size: 1.625em;
+      size: 1em;
       family: $regular-font;
       weight: 700;
     }
@@ -77,11 +74,109 @@
   }
 
   &__bottom {
-    height: 72px;
+    height: 35px;
     width: 100%;
 
     box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
     -webkit-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
     -moz-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
   }
+}
+
+@media only screen and (min-width: 414px) {
+
+}
+
+@media only screen and (min-width: $tablet) {
+  .main-upload {
+    width: 100%;
+    max-width: 980px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+
+    padding-right: 70px;
+
+    &__wrapper {
+      width: 426px;
+
+      background-color: $bg-white;
+      border-radius: 50px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    }
+
+    &__details {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      width: 100%;
+
+      padding-left: 14px;
+      padding-top: 11px;
+      padding-bottom: 5px;
+
+      box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
+      -webkit-box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
+      -moz-box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
+    }
+
+    &__person {
+      width: 70px;
+      height: 70px;
+
+      border: 4px solid #838383;
+      border-radius: 50%;
+
+      background-color: transparent;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      margin-right: 10px;
+    }
+
+    &__avatar {
+      width: 47px;
+      height: 40px;
+    }
+
+    &__name {
+      font: {
+        size: 1.625em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-darkgray;
+      line-height: 1;
+      text-transform: uppercase;
+    }
+
+    &__bottom {
+      height: 72px;
+      width: 100%;
+
+      box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
+      -webkit-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
+      -moz-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop) {
+
 }
