--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,13 +21,14 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
   }
 
   &__upper {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 
     width: 100%;
   }
