--- a/sass/content-wrapper.scss
+++ b/sass/content-wrapper.scss
@@ -105,7 +105,35 @@
 }
 
 @media only screen and (min-width: $laptop) {
+  .content-wrapper {
+    width: 388px;
 
+    &--tip {
+      margin-bottom: 20px;
+    }
+
+    /*Стилизация элемента*/
+    &__item {
+      width: 128px;
+      height: 128px;
+      border: 3px solid #ffffff;
+    }
+    /*Внутрянка для черных силуэтов*/
+    &__frame--empty {
+      width: 122px;
+      height: 122px;
+    }
+    /*Внутрянка для выбранного элемента*/
+    &__frame--active {
+      width: 122px;
+      height: 122px;
+    }
+
+    &__image {
+      max-height: 110px;
+      min-height: 110px;
+    }
+  }
 }
 
 @media only screen and (min-width: $laptop-wide) {
