--- a/sass/event/main-upload.scss
+++ b/sass/event/main-upload.scss
@@ -176,6 +176,97 @@
 @media only screen and (min-width: $laptop) {
   .main-upload {
     width: 100%;
+    max-width: 670px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+
+    padding-right: 100px;
+
+    &__wrapper {
+      width: 306px;
+
+      background-color: $bg-white;
+      border-radius: 35px;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+
+      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+    }
+
+    &__details {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      width: 100%;
+
+      padding-left: 10px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+
+      box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
+      -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
+      -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
+    }
+
+    &__person {
+      width: 50px;
+      height: 50px;
+
+      border: 3px solid #838383;
+      border-radius: 50%;
+
+      background-color: transparent;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      margin-right: 10px;
+    }
+
+    &__avatar {
+      min-height: 29px;
+      max-height: 29px;
+      width: auto;
+    }
+
+    &__name {
+      font: {
+        size: 1.125em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-darkgray;
+      line-height: 1;
+      text-transform: uppercase;
+    }
+
+    &__bottom {
+      height: 45px;
+      width: 100%;
+
+      box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
+      -webkit-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
+      -moz-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .main-upload {
+    width: 100%;
     max-width: 980px;
 
     display: flex;
