--- a/sass/event/upload-form.scss
+++ b/sass/event/upload-form.scss
@@ -242,6 +242,121 @@
 
     &__description {
       display: block;
+      width: 250px;
+
+      padding-top: 100px;
+
+      font: {
+        size: 1em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-lightgray;
+      line-height: normal;
+      text-transform: uppercase;
+      text-align: center;
+
+      margin-top: 0;
+      margin-bottom: 15px;
+
+      position: relative;
+
+      &::after {
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        content: '';
+
+        width: 78px;
+        height: 72px;
+
+        background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 486.3 486.3' fill='%23838383' style='enable-background:new 0 0 486.3 486.3;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpath d='M395.5,135.8c-5.2-30.9-20.5-59.1-43.9-80.5c-26-23.8-59.8-36.9-95-36.9c-27.2,0-53.7,7.8-76.4,22.5 c-18.9,12.2-34.6,28.7-45.7,48.1c-4.8-0.9-9.8-1.4-14.8-1.4c-42.5,0-77.1,34.6-77.1,77.1c0,5.5,0.6,10.8,1.6,16 C16.7,200.7,0,232.9,0,267.2c0,27.7,10.3,54.6,29.1,75.9c19.3,21.8,44.8,34.7,72,36.2c0.3,0,0.5,0,0.8,0h86 c7.5,0,13.5-6,13.5-13.5s-6-13.5-13.5-13.5h-85.6C61.4,349.8,27,310.9,27,267.1c0-28.3,15.2-54.7,39.7-69 c5.7-3.3,8.1-10.2,5.9-16.4c-2-5.4-3-11.1-3-17.2c0-27.6,22.5-50.1,50.1-50.1c5.9,0,11.7,1,17.1,3c6.6,2.4,13.9-0.6,16.9-6.9 c18.7-39.7,59.1-65.3,103-65.3c59,0,107.7,44.2,113.3,102.8c0.6,6.1,5.2,11,11.2,12c44.5,7.6,78.1,48.7,78.1,95.6 c0,49.7-39.1,92.9-87.3,96.6h-73.7c-7.5,0-13.5,6-13.5,13.5s6,13.5,13.5,13.5h74.2c0.3,0,0.6,0,1,0c30.5-2.2,59-16.2,80.2-39.6 c21.1-23.2,32.6-53,32.6-84C486.2,199.5,447.9,149.6,395.5,135.8z'/%3E%3Cpath d='M324.2,280c5.3-5.3,5.3-13.8,0-19.1l-71.5-71.5c-2.5-2.5-6-4-9.5-4s-7,1.4-9.5,4l-71.5,71.5c-5.3,5.3-5.3,13.8,0,19.1 c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4l48.5-48.5v222.9c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5V231.5l48.5,48.5 C310.4,285.3,318.9,285.3,324.2,280z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
+        background-repeat: no-repeat;
+        background-size: 78px 72px;
+        background-position: top center;
+      }
+    }
+
+    &__input + label {
+      font: {
+        size: 1.25em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      background-color: $btn-enter;
+      text-align: center;
+      vertical-align: middle;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      width: 184px;
+      height: 33px;
+      border-radius: 20px;
+
+      margin-bottom: 10px;
+
+      cursor: pointer;
+      outline: none;
+
+      box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+      -webkit-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+      -moz-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+    }
+
+    &__submit {
+      position: absolute;
+      bottom: -150px;
+      left: 50%;
+      transform: translateX(-50%);
+
+      width: 140px;
+      height: 35px;
+
+      border-radius: 20px;
+      border: none;
+
+      background-color: $bg-orange;
+
+      font: {
+        size: 1.5em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      line-height: 1;
+      text-align: center;
+      text-transform: uppercase;
+
+      box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+      -webkit-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+      -moz-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .upload-form {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    background-color: #ebebeb;
+
+    position: relative;
+
+    &__description {
+      display: block;
       width: 350px;
 
       padding-top: 120px;
