--- a/sass/gallery/controls-form.scss
+++ b/sass/gallery/controls-form.scss
@@ -50,6 +50,51 @@
 
 @media only screen and (min-width: $laptop) {
   .controls-form {
+    width: 226px;
+    height: 45px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+
+    margin-right: 20px;
+
+    &__input + label {
+      font: {
+        size: 1.5em;
+        family: $regular-font;
+        weight: 700;
+      }
+
+      color: $text-white;
+      background-color: $btn-upload;
+      text-align: center;
+      vertical-align: middle;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      width: 226px;
+      height: 45px;
+      border-radius: 30px;
+
+      cursor: pointer;
+      outline: none;
+
+      background-image: none;
+
+      box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+      -webkit-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+      -moz-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.25);
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .controls-form {
     width: 292px;
 
     display: flex;
