--- a/sass/gallery/gallery-slide.scss
+++ b/sass/gallery/gallery-slide.scss
@@ -22,6 +22,12 @@
 
 @media only screen and (min-width: $laptop) {
   .gallery-slide {
+    width: 180px !important;
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .gallery-slide {
     width: 100% !important;
   }
 }
