--- a/sass/gallery/main-controls.scss
+++ b/sass/gallery/main-controls.scss
@@ -165,6 +165,37 @@
 
 @media only screen and (min-width: $laptop) {
   .main-controls {
+    width: 540px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+
+    margin-top: 30px;
+
+    z-index: -2;
+
+    &__index {
+      display: none;
+    }
+
+    &__switch {
+      display: none;
+    }
+
+    &__form {
+      order: 1;
+    }
+
+    &__filter {
+      order: 2;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .main-controls {
     width: 655px;
 
     display: flex;
