--- a/sass/gallery/popup-gallery.scss
+++ b/sass/gallery/popup-gallery.scss
@@ -278,3 +278,191 @@
     }
   }
 }
+
+@media only screen and (min-width: $laptop) {
+  .popup-gallery {
+    &__wrapper {
+      width: 372px;
+
+      border-radius: 30px;
+    }
+
+    &__close {
+      top: -10px;
+      right: -10px;
+    }
+
+    &__header {
+      border-top-left-radius: 30px;
+      border-top-right-radius: 30px;
+
+      width: 100%;
+
+      padding-top: 10px;
+      padding-left: 10px;
+      padding-bottom: 10px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__wrap {
+      width: 61px;
+      height: 61px;
+
+      margin-right: 10px;
+    }
+
+    &__avatar {
+      width: auto;
+      min-height: 36px;
+      max-height: 36px;
+    }
+
+    &__name {
+      font: {
+        size: 1.375em;
+      }
+    }
+
+    &__frame {
+      height: 375px;
+    }
+
+    &__footer {
+      border-bottom-left-radius: 30px;
+      border-bottom-right-radius: 30px;
+
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 23px;
+      padding-bottom: 23px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__like {
+      width: 38px;
+      height: 34px;
+
+      background-size: 38px 34px;
+      margin-right: 15px;
+    }
+
+    &__count {
+      font: {
+        size: 1.25em;
+      }
+
+      margin-right: 0;
+    }
+
+    &__search {
+      display: block;
+
+      width: 34px;
+      height: 34px;
+
+      background-size: 34px 34px;
+
+      margin-left: auto;
+      margin-right: 20px;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .popup-gallery {
+    &__wrapper {
+      width: 516px;
+
+      border-radius: 50px;
+    }
+
+    &__header {
+      border-top-left-radius: 50px;
+      border-top-right-radius: 50px;
+
+      width: 100%;
+
+      padding-top: 10px;
+      padding-left: 10px;
+      padding-bottom: 10px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__wrap {
+      width: 84px;
+      height: 84px;
+
+      margin-right: 10px;
+    }
+
+    &__avatar {
+      width: 64px;
+      height: 50px;
+    }
+
+    &__name {
+      font: {
+        size: 2em;
+      }
+    }
+
+    &__frame {
+      height: 515px;
+    }
+
+    &__footer {
+      border-bottom-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 23px;
+      padding-bottom: 23px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    &__like {
+      width: 60px;
+      height: 44px;
+
+      background-size: 60px 44px;
+      margin-right: 15px;
+    }
+
+    &__count {
+      font: {
+        size: 1.875em;
+      }
+
+      margin-right: 0;
+    }
+
+    &__search {
+      display: block;
+
+      width: 40px;
+      height: 40px;
+
+      background-size: 40px 40px;
+
+      margin-left: auto;
+      margin-right: 20px;
+    }
+  }
+}
