--- a/sass/header.scss
+++ b/sass/header.scss
@@ -80,6 +80,17 @@
 
 @media only screen and (min-width: $laptop) {
   .header {
+    flex-direction: column;
+    justify-content: center;
+
+    padding-top: 10.5px;
+    padding-bottom: 10.5px;
+
+    &__logo {
+      width: 144px;
+      height: 21px;
+    }
+
     &__opener {
       display: none;
     }
@@ -88,15 +99,6 @@
 
 @media only screen and (min-width: $laptop-wide) {
   .header {
-    flex-direction: column;
-    justify-content: center;
-
-    background-color: $bg-header;
-
-    box-shadow: 0px 7px 20px 3px rgba(51,51,51,0.5);
-    -webkit-box-shadow: 0px 7px 20px 3px rgba(51,51,51,0.5);
-    -moz-box-shadow: 0px 7px 20px 3px rgba(51,51,51,0.5);
-
     padding-top: 12px;
     padding-bottom: 19px;
 
