--- a/sass/hint.scss
+++ b/sass/hint.scss
@@ -103,6 +103,57 @@
     &__description {
       display: block;
 
+      width: 310px;
+
+      font: {
+        size: 1.125em;
+        family: $regular-font;
+      }
+
+      color: $text-white;
+      line-height: normal;
+      text-align: center;
+
+      margin-bottom: 10px;
+      margin-top: 0;
+    }
+
+    &__link {
+      position: relative;
+
+      width: 144px;
+      height: 144px;
+
+      &::after {
+        width: 90px;
+        height: 112px;
+        background-size: 90px 112px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide) {
+  .hint {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    padding-right: 20px;
+    margin: 0;
+
+    &--event {
+      display: none;
+    }
+
+    &--gallery {
+      display: none;
+    }
+
+    &__description {
+      display: block;
+
       width: 315px;
 
       font: {
